Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 4.4.0
-
None
-
ghx-label-6
Description
A DCHECK in hdfs-scanner.h is hit when skipping a MIN_MAX runtime filter using RUNTIME_FILTER_IDS_TO_SKIP query option. This is because during runtime filter generation, HdfsScanNode.tryToComputeOverlapPredicate() is called and register a
TOverlapPredicateDesc, but the minmax filter is then skipped later, causing backend to hit DCHECK.